# polywrap-wrap-test-1

./: .gitignore  Cargo.toml  README.md  package.json  polywrap.build.yaml  polywrap.graphql  polywrap.yaml
src/: lib.rs
src/wrap/: entry.rs  mod.rs  prelude.rs
src/wrap/module/: mod.rs  module.rs  wrapped.rs
src/wrap/pong_result/: mod.rs
